# bik

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/cli/: CommandHandler.cpp  CommandHandler.h  main.cpp
src/core/: BackupManager.cpp  BackupManager.h  ProjectConfig.cpp  ProjectConfig.h  ZipUtils.cpp  ZipUtils.h
src/gui/: MainWindow.cpp  MainWindow.h  main.cpp
